--- a/tests/fixtures/AuthTest/confirm_email_with_redirect.html
+++ b/tests/fixtures/AuthTest/confirm_email_with_redirect.html
@@ -3,8 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link href="https://fonts.cdnfonts.com/css/prozak" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/atkinson-hyperlegible-2" rel="stylesheet">
 </head>
-<body style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; background-color: #f5f8fa; color: #74787E; height: 100%; hyphens: auto; line-height: 1.4; margin: 0; -moz-hyphens: auto; -ms-word-break: break-all; width: 100% !important; -webkit-hyphens: auto; -webkit-text-size-adjust: none; word-break: break-word;">
+<body style="font-family: 'Atkinson Hyperlegible', sans-serif; box-sizing: border-box; background-color: #f5f8fa; color: #74787E; height: 100%; hyphens: auto; line-height: 1.4; margin: 0; -moz-hyphens: auto; -ms-word-break: break-all; width: 100% !important; -webkit-hyphens: auto; -webkit-text-size-adjust: none; word-break: break-word;">
 <style>
     @media  only screen and (max-width: 600px) {
         .inner-body {
@@ -23,36 +25,50 @@
     }
 </style>
 
-<table class="wrapper" width="100%" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; background-color: #f5f8fa; margin: 0; padding: 0; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
+<table class="wrapper" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Atkinson Hyperlegible', sans-serif; box-sizing: border-box; background-color: #f5f8fa; margin: 0; padding: 0; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
     <tr>
-        <td align="center" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box;">
-            <table class="content" width="100%" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; margin: 0; padding: 0; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
+        <td align="center" style="font-family: 'Atkinson Hyperlegible', sans-serif; box-sizing: border-box; background-color: #c1c1c0;">
+            <table class="content" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Atkinson Hyperlegible', sans-serif; border-radius: 20px; overflow: hidden; box-sizing: border-box; margin: 50px 0; padding: 0; max-width: 350px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
                 <tr>
-                    <td class="header" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; padding: 25px 0; text-align: center;">
-                        <a href="" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; color: #bbbfc3; font-size: 19px; font-weight: bold; text-decoration: none; text-shadow: 0 1px 0 white;">
-                            Laravel
+                    <td class="header" style="font-family: Prozak, sans-serif; font-weight: 700; font-size: 2em; letter-spacing: 4px; background-color: #262525; box-sizing: border-box; padding: 15px 0; text-align: center;">
+                        <a href="http://localhost" style="font-family: Prozak, sans-serif; font-weight: 700; letter-spacing: 4px; color: #c1c1c0; font-size: 1.5em; text-decoration: none;">
+                            ARTfora
                         </a>
                     </td>
                 </tr>
 
                 <!-- Email Body -->
                 <tr>
-                    <td class="body" width="100%" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; background-color: #FFFFFF; border-bottom: 1px solid #EDEFF2; border-top: 1px solid #EDEFF2; margin: 0; padding: 0; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
+                    <td class="body" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Atkinson Hyperlegible', sans-serif; box-sizing: border-box; background-color: #3a3a39; margin: 0; padding: 1rem; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-            <td align="center"
-                style="font-size: 32px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;"
-                class="padding-copy">Welcome </td>
-        </tr>
-        <tr>
             <td align="left"
-                style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;"
+                style="padding: 0; font-size: 16px; line-height: 25px; font-family: 'Atkinson Hyperlegible', sans-serif; color: #c1c1c0;"
                 class="padding-copy"
             >
-                Thanks for signing up as a ARTfora partner, we're thrilled to have you on board.
-                The first thing we need you to do is verify your email address by clicking on the button below:
+                Thank you for signing up for ARTfora.
             </td>
         </tr>
+
+        <tr>
+            <td align="left"
+                style="padding: 1rem 0 0 0; font-size: 16px; line-height: 25px; font-family: 'Atkinson Hyperlegible', sans-serif; color: #c1c1c0;"
+                class="padding-copy"
+            >
+                Please click the button at the bottom or paste the website address into your browser to verify your
+                email address.
+            </td>
+        </tr>
+
+        <tr>
+            <td align="left"
+                style="padding: 1rem 0 2rem 0; font-size: 16px; line-height: 25px; font-family: 'Atkinson Hyperlegible', sans-serif; color: #FFFFFF;"
+                class="padding-copy"
+            >
+                <a href="http://localhost/verify-email?token=test_token&redirect=/profile/promocodes" style="color: #FFFFFF;">http://localhost/verify-email?token=test_token&redirect=/profile/promocodes</a>
+            </td>
+        </tr>
+
         <tr>
             <td align="center">
                 <!-- BULLETPROOF BUTTON -->
@@ -61,13 +77,13 @@
                         <td align="center" style="padding-top: 25px;" class="padding">
                             <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                 <tr>
-                                    <td align="center" style="border-radius: 5px;" bgcolor="#329BFB">
+                                    <td align="center" style="border-radius: 10px;" bgcolor="#c1c1c0">
                                         <a
                                             href="http://localhost/verify-email?token=test_token&redirect=/profile/promocodes"
                                             target="_blank"
-                                            style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #329BFB; display: inline-block;"
+                                            style="border-radius: 10px; font-family: Prozak, sans-serif; font-weight: 700; font-size: 2em; letter-spacing: 4px; color: #3a3a39; text-decoration: none; padding: 5px 25px; border: 1px solid #c1c1c0; display: inline-block;"
                                             class="mobile-button">
-                                            Verify email
+                                            YUP, IT'S ME
                                         </a>
                                     </td>
                                 </tr>
@@ -78,20 +94,6 @@
             </td>
         </tr>
     </table>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box;">
-                        <table class="footer" align="center" width="570" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; margin: 0 auto; padding: 0; text-align: center; width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 570px;">
-                            <tr>
-                                <td class="content-cell" align="center" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; padding: 35px;">
-                                    <p style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; line-height: 1.5em; margin-top: 0; color: #AEAEAE; font-size: 12px; text-align: center;">©
-                                        2018 Laravel. All rights reserved.
-                                    </p>
-                                </td>
-                            </tr>
-                        </table>
                     </td>
                 </tr>
             </table>
