--- a/tests/fixtures/ContactUsTest/contact_us_request.html
+++ b/tests/fixtures/ContactUsTest/contact_us_request.html
@@ -42,26 +42,34 @@
                     <td class="body" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Atkinson Hyperlegible', sans-serif; box-sizing: border-box; background-color: #3a3a39; margin: 0; padding: 1rem; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-            <td align="center"
-                style="font-size: 32px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;"
+            <td align="left"
+                style="padding: 0 0 20px 0; font-size: 16px; line-height: 25px; font-family: 'Atkinson Hyperlegible', sans-serif; color: #c1c1c0;"
                 class="padding-copy"
             >
-                Sender sent contact us request
+                <i>MESSAGE FROM:</i>
+                <br>
+                Sender
             </td>
         </tr>
+
         <tr>
             <td align="left"
-                style="padding: 20px; text-align: center; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;"
+                style="padding: 0 0 20px 0; font-size: 16px; line-height: 25px; font-family: 'Atkinson Hyperlegible', sans-serif; color: #c1c1c0;"
                 class="padding-copy"
             >
-                <b>Contact back email <a href="mailto:sender@email.com">sender@email.com</a></b>
+                <i>SENDER'S EMAIL ADDRESS:</i>
+                <br>
+                <a style="color: white;" href="mailto:sender@email.com">sender@email.com</a>
             </td>
         </tr>
+
         <tr>
             <td align="left"
-                style="padding: 20px 20px; text-align: center; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;"
+                style="padding: 0; font-size: 16px; line-height: 25px; font-family: 'Atkinson Hyperlegible', sans-serif; color: #c1c1c0;"
                 class="padding-copy"
             >
+                <i>MESSAGE:</i>
+                <br>
                 Lorem upsum
             </td>
         </tr>
